external-crates/move/crates/move-compiler/tests/move_check/parser/num_literal_underscore_trailing.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/num_literal_underscore_trailing.move:4:20
  │
4 │         let _ = 0u8_;
  │                    ^
  │                    │
  │                    Unexpected '_'
  │                    Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/num_literal_underscore_trailing.move:4:20
  │
4 │         let _ = 0u8_;
  │                    ^
  │                    │
  │                    Unexpected '_'
  │                    Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

